--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <hr />
-<h1>App.js</h1>
-<mf-react-app></mf-react-app>
+<h1>Clients.js</h1>
+<mf-react-clients></mf-react-clients>
 <hr />
 <h1>Counter.js</h1>
 <co-react-counter></co-react-counter>
