adding asset + title

--- a/index.html
+++ b/index.html
@@ -1,8 +1,22 @@
-<hr />
-<h1>Clients.js</h1>
-<mf-react-clients></mf-react-clients>
-<hr />
-<h1>Counter.js</h1>
-<co-react-counter></co-react-counter>
-<script src="./bundle.js"></script>
-<hr />
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Remote React</title>
+</head>
+
+<body>
+    <hr />
+    <h1>Clients.js</h1>
+    <mf-react-clients></mf-react-clients>
+    <hr />
+    <h1>Counter.js</h1>
+    <co-react-counter></co-react-counter>
+    <script src="./bundle.js"></script>
+    <hr />
+</body>
+
+</html>
